--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -29,11 +29,12 @@
     }
   },
   "include": [
-  "next-env.d.ts",
-  "src/**/*.ts",
-  "src/**/*.tsx",
-  ".next/types/**/*.ts"
-],
+    "**/*.ts",
+    "**/*.tsx",
+    "global.d.ts",  // Ensure this is included
+    "next-env.d.ts",
+    ".next/types/**/*.ts"
+  ],
   "exclude": [
     "node_modules"
   ]
